conformance/tests/tcproute-tls-terminate.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-tcproute-tls-terminate
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: tls-terminate
      port: 443
      protocol: TLS
      hostname: tls.example.com
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TCPRoute
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-terminate-checks-certificate
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcproute-tls-terminate
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-tcproute-tls-terminate
      sectionName: tls-terminate
  rules:
    - backendRefs:
        - name: tcp-backend
          port: 3000 # Plain text port; gateway terminates TLS and forwards plaintext.
